# Release Notes

## Unreleased

- Default to use SystemRandom() CSPRNG
- Expose star_plus_limit as a property on Xeger (#37)
- Fix error when regex specified a repeat larger than the star_plus limit (#38)
- Behavior change: explicit repeats (e.g. `a{1000}`) are not restricted by star_plus_limit
- Drops support for Python 3.7, adds support for Python 3.12.

## 3.2.2

- Removes type stubs for `random` to fix type-checking failures
  under Python 3.11.

## 3.2.1

- Fixes import failure under Python 3.11

## 3.2.0

- PEP 561 compatible typing
- Fix a bug that made xeger() fail under pypy3.8

## 3.1.0

- Fix a bug where setting end_range but not start_range would fail.
- Statically type the library, using PEP 484 annotations.
- Drops test coverage for Python 3.6 (EoL December 2021).
- Adds test coverage for Python 3.10.

## 3.0.0

- Drops support for Python 2.7 and 3.5
- Fixes a bug where `include` could make the generated string too long.
- Add new `rstr.unambiguous()` method that omits homographs.