@@ -2,6 +2,7 @@
 
 ## Unreleased
 
+- Refactor: Xeger and Rstr are distinct, Xeger no longer inherits from XegerBase
 - Default to use SystemRandom() CSPRNG
 - Expose star_plus_limit as a property on Xeger (#37)
 - Fix error when regex specified a repeat larger than the star_plus limit (#38)
